# blog

./: .gitignore  .pre-commit-config.yaml  404.md  CNAME  README.md  archives.html  authors.html  categories.html  cruk_reassessment.html  environment.yml  guatemala-forum.html  index.html  index2.html  index3.html  pelicanconf.py  pelicanconf.py~  publishconf.py  pyproject.toml  robots.txt  serve.sh  sitemap.xml
aiguilles-rouges/: index.html
author/: alison-grimes.html  daniel-himmelstein.html  daniel-himmelstein2.html  daniel-himmelstein3.html
biorxiv-licenses/: index.html
cache/: ArticlesGenerator-Readers  PagesGenerator-Readers
category/: misc.html  misc2.html  misc3.html
citation-styles/: index.html
content/: 404.md  cruk_reassessment.md  cruk_reassessment.md~  elevation-and-lung-cancer.md  elevation-and-lung-cancer.md~  friendship-network.md  friendship-network.md~  innovation-in-medical-education-forum.md~
continuous-analysis/: index.html
cruk-reassessment/: index.html
cruk_reassessment/: index.html
drafts/: biorxiv-licenses.html  citation-styles.html  continuous-analysis.html  data-copyright.html  history-of-delays.html  long-trail-maps.html  mesothelioma.html  nsf-year-summaries.html  phd-exhibit.html  reviewing-journal-review-sites.html  scihub.html
elevation-and-lung-cancer/: index.html
emp-and-slime/: index.html
feeds/: all.atom.xml  all.rss.xml
friendship-network/: index.html
hawaii-big-island/: index.html
history-of-delays/: index.html
iceland/: index.html
imef-guatemala/: index.html
irreproducible-timestamps/: index.html
long-trail-maps/: index.html
maddox-prize-reference/: index.html
mesothelioma/: index.html
(+89 files in other folders)
