[project]
name = "blog"
version = "0.0.0"
description = "Daniel Himmelstein's Blog"
authors = [{ name = "Daniel Himmelstein" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    "pelican>=4.9.1,<5",
    "markdown~=3.6",
    "smartypants>=2.0.1,<3",
    "jinja2>=3.1.4,<4",
    "typogrify>=2.0.7,<3",
    "pre-commit>=3.7.1,<4",
]
