[project]
name = "blog"
version = "0.0.0"
description = "Daniel Himmelstein's Blog"
authors = [{ name = "Daniel Himmelstein" }]
requires-python = "~=3.13.0"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.8.2",
    "pelican>=4.11.0",
    "smartypants>=2.0.2",
    "typogrify>=2.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
