[project]
name = "blog"
version = "0.0.0"
description = "Daniel Himmelstein's Blog"
authors = [{ name = "Daniel Himmelstein" }]
requires-python = "~=3.13.0"
dependencies = [
    "jinja2>=3.1.6",
    "markdown>=3.8.2",
    "pelican>=4.11.0",
    "smartypants>=2.0.2",
    "typogrify>=2.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]

[tool.markdownlint]
# Enable most rules by default
default = true
# Disable problematic rules for blog content
MD009 = false  # no-trailing-spaces
MD013 = false  # line-length (prose can be long)
MD026 = false  # Trailing punctuation in heading
MD033 = false  # no-inline-html Inline HTML
MD041 = false  # first-line-heading (posts have metadata)
MD045 = false  # Images should have alternate text
MD051 = false  # link fragments should be valid
MD059 = false  # Link text should be descriptive